--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "style-loader": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.8",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.1"
   }
