--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "dev-server": "webpack serve --config webpack.dev.js",
+    "prod-server": "webpack serve --config  webpack.prod.js",
     "lint": "eslint  ./src/*.js",
     "prepare": "husky install"
   },
